2011-04-11  Ben Taylor  <bentaylor.solx86@gmail.com>

Reviewed by David Levin.

        https://bugs.webkit.org/show_bug.cgi?id=57535

        Better compile fix for Solaris 10/Sun Studio 12 CC
        needing <sys/time.h>

        * loader/icon/IconRecord.h:
        * page/Page.h:
        * platform/network/ResourceResponseBase.h:

Canonical link: https://commits.webkit.org/73288@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83526 268f45cc-cd09-0410-ab3c-d52691b4dbfc